--- a/user-service.properties
+++ b/user-service.properties
@@ -1,2 +1,1 @@
-order-management-service.minimumOrderAmount=500
-order-management-service.maximumOrderAmount=50000
+user.incorrect.password.attempts=3
